Add Sound tile to Quick Settings
abc ezio84: adapt to O, show volume panel with long press,
use full dnd (no interruptions) as silent mode

@beanstown106: Sound Tile improvements
*added longpress action
*added more descriptive labels for each state instead of always saying sound

Change-Id: I07cba9d75831c9020c5795013bd654b7ecd10ff6
ezio84: Adapt for N

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -828,6 +828,12 @@
     <!-- QuickSettings: NFC (on) [CHAR LIMIT=NONE] -->
     <string name="quick_settings_nfc_on">NFC is enabled</string>
 
+    <!-- QuickSettings: Sound Tile -->
+    <string name="quick_settings_sound_label">Sound</string>
+    <string name="quick_settings_sound_ring">Ring</string>
+    <string name="quick_settings_sound_vibrate">Vibrate</string>
+    <string name="quick_settings_sound_dnd">Do not disturb</string>
+
     <!-- Recents: The empty recents string. [CHAR LIMIT=NONE] -->
     <string name="recents_empty_message">No recent items</string>
     <!-- Recents: The empty recents string after dismissing all tasks. [CHAR LIMIT=NONE] -->
